# platon

./: .env.example  .gitignore  CONTRIBUTORS.md  README.md  SECURITY.md  docker-compose.yml  gitea.credentials.example  platon.env.example  start.sh
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/platon/: aimarket.py  ask.py  commit_reveal.py  config.py  dynamics.py  hub_client.py  main.py  metrics.py  oracle.py  oracle_providers.py  randomness.py  signing.py  simulation.py  surrogate.py
backend/tests/: conftest.py  test_api.py  test_dynamics.py  test_oracle.py  test_randomness.py  test_signing.py
docs/: ECOSYSTEM.md  GALLERY.md  INTEGRATION.md  README.md  SECURITY.md
docs/en/: ORACLE.md
docs/es/: ORACLE.md
docs/recordings/: platon-cosmos.webm  platon-demo-latest.webm
docs/ru/: ORACLE.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/scripts/: gallery.mjs
frontend/src/: App.tsx  index.css
frontend/src/components/: AskPanel.tsx  ErrorBoundary.tsx  FallbackCanvas.tsx  SafeShadowCanvas.tsx  ShadowCanvas.tsx
frontend/src/hooks/: usePlatonSocket.ts
frontend/src/lib/: i18n.test.ts  i18n.ts  platonUrl.ts  types.test.ts  types.ts
frontend/tests/e2e/: ui.spec.ts
scripts/: capture_gallery.py  connect-ecosystem.sh  platon-docker-lib.sh  platon-down.sh  platon-up.sh  randomness_battery.py  register_with_hub.py  sync-gitea.sh
tests/e2e/: ui.spec.ts
