[project]
name = "platon"
version = "0.1.0"
description = "UMBRAL — 32D dynamical shadow oracle for the AIMarket ecosystem"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "numpy>=2.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dateutil>=2.9.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "dilithium-py>=1.4.0",
]
# Post-quantum hybrid signatures (ML-DSA-65 / FIPS 204). Enable with PLATON_PQC_ENABLED=1.
pqc = [
    "dilithium-py>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["platon"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
